--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,5 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-magewell"
 BBFILE_PATTERN_meta-magewell = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-magewell = "6"
+
+KERNEL_MODULE_AUTOLOAD += "ProCapture"
